--- a/Lab8/views/characterSearchResults.handlebars
+++ b/Lab8/views/characterSearchResults.handlebars
@@ -13,3 +13,24 @@ The title of the document should be "Characters Found". You should have the titl
 
 
     }}
+
+<!DOCTYPE html>
+<html lang="en">
+    
+    <head>
+        <meta charset="utf-8">
+        <title>Characters Found</title>
+        <link rel="stylesheet" href="/public/main.css">
+    </head>
+
+    <body>
+        <h1>Characters Found</h1>
+        <h2>{{{searchByCharactersName}}}</h2>
+        <main>
+            <ol>
+                {{#each }}
+            </ol>
+        </main>
+    </body>
+
+</html>
