--- a/Lab8/views/layouts/main.handlebars
+++ b/Lab8/views/layouts/main.handlebars
@@ -3,15 +3,12 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>Lab 8</title>
-    <link rel="stylesheet" href="/public/main.css">
-</head>
-
-<body>
-    {{{body}}}
-</body>
-
+    <head>
+        <meta charset="UTF-8">
+        <title>{{title}}</title>
+        <link rel="stylesheet" href="/public/main.css">
+    </head>
+    <body>
+        {{{body}}}
+    </body>
 </html>
