Fix home handlebar

--- a/Lab8/views/home.handlebars
+++ b/Lab8/views/home.handlebars
@@ -16,7 +16,7 @@ Also inside the main element, you will have a form; this form will POST to /sear
     <p class="paragraph-style">
         This site utilizes the Marvel API to provide the user with information about Marvel characters. This site is built using HTML, CSS, Express, and uses Handlebars to create pages and handle routing. This is an exciting project using APIs to get information about Marvel characters.
     </p>
-    <form action="/searchmarveluniverse" method="POST">
+    <form action="/searchmarveluniverse" method="post">
         <label for="searchByCharactersName">Search for a character by name:</label>   
         <input name="searchByCharactersName" id="searchByCharactersName" type="text" required> 
         <input type="submit" value="Search">
