--- a/Lab8/views/characterSearchResults.handlebars
+++ b/Lab8/views/characterSearchResults.handlebars
@@ -23,4 +23,5 @@ The title of the document should be "Characters Found". You should have the titl
       </li>
     {{/each}}
   </ol>
+  <a href="/">Search for Another Character</a>
 </main>
