--- a/Lab8/views/error.handlebars
+++ b/Lab8/views/error.handlebars
@@ -3,4 +3,5 @@ You can use this template to render any errors on your site if you wish. You do 
 }}
 <main>
     <p>{{error}} Error: {{message}}</p>
+    <a href="/">Search for Another Character</a>
 </main>
