--- a/Lab8/views/error.handlebars
+++ b/Lab8/views/error.handlebars
@@ -1,7 +1,7 @@
 {{!
 You can use this template to render any errors on your site if you wish. You do not HAVE to use this, but you can.
 }}
-<main>
-    <p>{{error}} Error: {{message}}</p>
+<main class="home-format">
+    <p class="error">{{error}} Error: {{message}}</p>
     <a href="/">Search for Another Character</a>
 </main>
