--- a/Lab8/public/main.css
+++ b/Lab8/public/main.css
@@ -1,8 +1,8 @@
 /*This file should have 10 CSS rulesets */
 .title {
     font-weight: bolder;
-    font-size: x-large;
-    color: rgb(0, 4, 66);
+    font-size: xx-large;
+    color: rgb(255, 0, 0);
     text-align: center;
 }
 .home-format {
@@ -15,4 +15,49 @@
     margin-right: 10rem;
     margin-left: 10rem;
     margin-bottom: 3rem;
+    text-align: center;
+}
+.error {
+    text-align: center;
+    font-weight: bold;
+    font-size: larger;
+    color: red;
+}
+.button {
+    background-color: red;
+    color: white;
+    border-color: black;
+    border-radius: 2rem;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.image {
+    justify-content: center;
+    align-items: center;
+    display: block;
+    margin-left: 43%;
+    height: auto;
+    max-width: 15rem;
+    margin-bottom: 2rem;
+}
+.list-styling {
+    margin-left: 42%;
+    color: rgb(0, 79, 182);
+}
+h2 {
+    text-align: center;
+    font-size: x-large;
+    color: rgb(110, 0, 0);
+}
+.search-cta {
+    margin-left: 43%;
+    color: brown;
+    font-size: larger;
+    font-weight: bold;
+    margin-top: 5rem;
+}
+.search-request {
+    color: brown;
+    font-size: larger;
+    font-weight: bold;
 }
