--- a/Lab8/views/characterById.handlebars
+++ b/Lab8/views/characterById.handlebars
@@ -18,15 +18,15 @@ The title of the document should be the name of the character. You should have t
     }}
     <main>
         <article>
-            <h1 class="title">{{characterName}}</h1>
-            <img alt = "{{characterName}}" src = "{{imageUrl}}" />
-            <p>{{description}}</p>
+            <h1 class="title">{{title}}</h1>
+            <img class="image" alt = "{{characterName}}" src = "{{imageUrl}}" />
+            <p class="paragraph-style">{{description}}</p>
             <h2>Comics</h2>
-            <ul>
+            <ul class="list-styling">
                 {{#each comics}}
                 <li>{{this.name}}</li>
                 {{/each}}
             </ul>
+            <a class="search-cta" href="/">Search for Another Character</a>
         </article>
-        <a href="/">Search for Another Character</a>
     </main>
