--- a/Lab10/views/layouts/main.handlebars
+++ b/Lab10/views/layouts/main.handlebars
@@ -4,4 +4,16 @@ don't forget to include your css and your client-side script file references in 
 for the theme, you can simply read the themePreference for the user and inject it into the body element
 {{!
 
-<body class="{{themePreference}}">
+<body class="{{themePreference}}">}}
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>{{title}}</title>
+        <link rel="stylesheet" href="/public/main.css">
+    </head>
+    <body class="{{themePreference}}">
+        {{{body}}}
+    </body>
+</html>
