Finish home handlebar

--- a/Lab10/views/layouts/main.handlebars
+++ b/Lab10/views/layouts/main.handlebars
@@ -11,7 +11,7 @@ for the theme, you can simply read the themePreference for the user and inject i
     <head>
         <meta charset="UTF-8">
         <title>{{title}}</title>
-        <link rel="stylesheet" href="/public/main.css">
+        <link rel="stylesheet" href="/public/css/sitestyles.css">
     </head>
     <body class="{{themePreference}}">
         {{{body}}}
