Finish signout handlebar

--- a/Lab10/views/signout.handlebars
+++ b/Lab10/views/signout.handlebars
@@ -3,3 +3,7 @@
 logout handlebar template
 
 --}}
+<main>
+    <p>You are now logged out</p>
+    <a id = "loginlink" href="/login">Sign back in</a>
+</main>
