Finish error handlebar

--- a/Lab10/views/error.handlebars
+++ b/Lab10/views/error.handlebars
@@ -6,3 +6,7 @@ they are not a super user. You don't HAVE to use this template, you can display 
 the pages with the forms themselves. You can use this if you wish though. 
 
 --}}
+<main>
+    <p>Error: {{error}}</p>
+    <a href="/">Go to home</a>
+</main>
