Finish client side login checks

--- a/Lab10/views/layouts/main.handlebars
+++ b/Lab10/views/layouts/main.handlebars
@@ -16,4 +16,5 @@ for the theme, you can simply read the themePreference for the user and inject i
     <body class="{{themePreference}}">
         {{{body}}}
     </body>
+    <script src="/public/js/form_validate.js"></script>
 </html>
