--- a/Lab10/views/superuser.handlebars
+++ b/Lab10/views/superuser.handlebars
@@ -6,6 +6,7 @@ based on the specs.
 
 
 --}}
+<h1>Super User Page</h1>
 <div id="superUserView">
     <p id="welcome">Welcome {{firstName}} {{lastName}}, the time is now: {{currentTime}} and the current date is {{currentDate}} . You get super user access since you are a super user. Remember, with great power comes great responsibility!!</p>
     <p id="signupDate">The day you signed up was: {{signupDate}}</p>
