--- a/Lab10/views/layouts/main.handlebars
+++ b/Lab10/views/layouts/main.handlebars
@@ -1,10 +1,7 @@
 {{! This will be your default layout for all handlebars file rendered. This will be inherited by all other templates. }}
 {{! Refer lecture code to learn more on how this works
 don't forget to include your css and your client-side script file references in the layout.
-for the theme, you can simply read the themePreference for the user and inject it into the body element
-{{!
-
-<body class="{{themePreference}}">}}
+for the theme, you can simply read the themePreference for the user and inject it into the body element}}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -12,7 +9,7 @@ for the theme, you can simply read the themePreference for the user and inject i
         <meta charset="UTF-8">
         <link rel="stylesheet" href="/public/css/sitestyles.css">
     </head>
-    <body>
+    <body class="{{themePreference}}">
         {{{body}}}
     </body>
     <script src="/public/js/form_validate.js"></script>
