--- a/Lab10/views/home.handlebars
+++ b/Lab10/views/home.handlebars
@@ -5,7 +5,7 @@ Home handelbars for '/' route
 --}}
 <h1 id="appTitle">Lab 10 - Login System</h1>
 
-<main>
+<main class="page-format">
     <p id="siteDescription">
     This is a login system for lab 10, the final lab of the semester. It allows users to register, log in, and navigate based on their roles. Normal users and superusers have different access levels.
     </p>
@@ -24,7 +24,7 @@ Home handelbars for '/' route
         <a id="loginlink" href="/login">Login Here</a>
     {{/if}}
 
-    <footer>
+    <footer class="footer">
         <p>Rishabh Dhadda 10460208</p>
     </footer>
 </main>
