--- a/Lab10/views/superuser.handlebars
+++ b/Lab10/views/superuser.handlebars
@@ -7,7 +7,7 @@ based on the specs.
 
 --}}
 <h1>Super User Page</h1>
-<div id="superUserView">
+<div id="superUserView" class="page-format">
     <p id="welcome">Welcome {{firstName}} {{lastName}}, the time is now: {{currentTime}} and the current date is {{currentDate}} . You get super user access since you are a super user. Remember, with great power comes great responsibility!!</p>
     <p id="signupDate">The day you signed up was: {{signupDate}}</p>
     <p id="lastLogin">The last time you logged in was:  {{lastLogin}}</p>
