--- a/Lab10/views/user.handlebars
+++ b/Lab10/views/user.handlebars
@@ -4,7 +4,7 @@ If the user is logged in , and 'GET /user' endpoint is called, you will render t
 
 --}}
 <h1>User Page</h1>
-<div id="userView">
+<div id="userView" class="page-format">
     <p id="welcome">Welcome {{firstName}} {{lastName}}, the time is now: {{currentTime}} and the current date is {{currentDate}}. Your role in the system is: {{role}}.</p>
     <p id="signupDate">The day you signed up was: {{signupDate}}</p>
     <p id="lastLogin">The last time you logged in was:  {{lastLogin}}</p>
